Fixed wrong spacing in radio and checkbox labels

--- a/src/alto-ui/Form/Radio/Radio.scss
+++ b/src/alto-ui/Form/Radio/Radio.scss
@@ -2,7 +2,7 @@
 
 .Radio {
   position: relative;
-  line-height: 1;
+  line-height: 2;
 }
 
 .Radio__input {
